--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ body{
 }
 
 .blue{
-    background-color: rgb(11,90,132);
+    background-color: rgb(31, 139, 201);
 }
 
 .black-button{
@@ -223,6 +223,10 @@ body{
     width: 4vh;
     border-radius: 50%;
     box-shadow: 2px 3px 3px rgb(95, 12, 12);
+    font-size: 120%;
+    color: rgb(154, 23, 23);
+    font-weight: bolder;
+    padding-bottom: 2px;
 }
 
 .dark-red{
